--- a/4-matplotlib/4.00-intro-MPL.ipynb
+++ b/4-matplotlib/4.00-intro-MPL.ipynb
@@ -320,6 +320,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Okay, will need to look at that later since that's as written in the book"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
