revisions, notebook creation

--- a/4-matplotlib-ipynb/4.05-histograms-bins-densityFuncs.ipynb
+++ b/4-matplotlib-ipynb/4.05-histograms-bins-densityFuncs.ipynb
@@ -266,11 +266,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Other scipy modules which implement KDE include:\n",
+    "# Other modules which implement KDE include:\n",
     "# sklearn.neighbors.KernelDensity\n",
     "# statsmodels.nonparametric.kernel_density.KDEMultivariate"
    ]
