--- a/4-matplotlib-ipynb/4.12-Three-Dimensional-Plots.ipynb
+++ b/4-matplotlib-ipynb/4.12-Three-Dimensional-Plots.ipynb
@@ -48,13 +48,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*3d objects are a lot of fun to use interactively. I'm going to create a seperate notebook w/ %matplotlib notebook for that.*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 3d objects are a lot of fun to use interactively. I'm going to create a seperate notebook "
-   ]
+   "source": []
   }
  ],
  "metadata": {
